# vulkan-toy

./: allocator.hpp  attachment.cpp  attachment.hpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  context.cpp  context.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  image.hpp  main.cpp  meson.build  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_context.cpp  render_context.hpp  render_graph.cpp  render_graph.hpp  render_pass.cpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  utils.hpp  vk_check.hpp  vulkan.cpp  vulkan.hpp
resources/: README.md
shaders/: shader.frag  shader.vert
src/: allocator.cpp  buffer.cpp  buffer.hpp  chunk.hpp  command_buffer.cpp  command_buffer.hpp  context.hpp  delegate.hpp  descriptor_info.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  fence.cpp  frame.cpp  frame.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  impl.cpp  input.hpp  loader.cpp  loader.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  ref.hpp  render_context.cpp  render_context.hpp  render_pass.cpp  render_pass.hpp  (+20 more)
src/core/: command_buffer.cpp  command_buffer.hpp  context.cpp  context.hpp  fence.cpp  semaphore.cpp  semaphore.hpp
src/render/: camera.cpp  camera.hpp  frame.cpp  framebuffer.cpp  framebuffer.hpp  input.hpp  pipeline.cpp  pipeline.hpp  render_pass.hpp  render_target.cpp  render_target.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
src/resources/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  sampler.cpp  sampler.hpp  texture.cpp  texture.hpp
src/utils/: delegate.cpp  delegate.hpp  ll.hpp
